# POLARIS_Robot_Manager

./: .clang-format  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml
battery_manager/: CMakeLists.txt  package.xml
battery_manager/msg/: BatteryStatus.msg
battery_manager/src/: BatteryStatusManager.cpp  BatteryStatusManager.h  CMakeLists.txt  main.cpp  subscriber.cpp
battery_manager/src/mock/: CMakeLists.txt  MockBatteryPublisher.cpp
gem_pure_pursuit_sim_new/: CMakeLists.txt  package.xml
gem_pure_pursuit_sim_new/scripts/: pure_pursuit_sim.py
gps_accuracy_manager/: CMakeLists.txt  package.xml
gps_accuracy_manager/msg/: GpsAccuracyStatus.msg
gps_accuracy_manager/src/: CMakeLists.txt  GpsAccuracyStatusManager.cpp  GpsAccuracyStatusManager.h  main.cpp
gps_accuracy_manager/src/mock/: CMakeLists.txt  MockGpsAccuracyPublisher.cpp  MockGpsAccuracyPublisher.h  main.cpp
navigation_manager/: CMakeLists.txt  LICENSE  package.xml
navigation_manager/src/: CMakeLists.txt  NavigationStatusManager.cpp  NavigationStatusManager.h  main.cpp
robot_manager_msgs/: CMakeLists.txt  package.xml
robot_manager_msgs/msg/: NavigationStatus.msg  SignalStatus.msg  SignalStrength.msg  TemperatureStatus.msg
robot_status_manager/: CMakeLists.txt  package.xml
robot_status_manager/launch/: robot_status_manager.launch
robot_status_manager/msg/: RobotStatus.msg
robot_status_manager/src/: CMakeLists.txt  RobotStatusManager.cpp  RobotStatusManager.h  main.cpp
signal_status_manager/: CMakeLists.txt  package.xml
signal_status_manager/src/: CMakeLists.txt  SignalStatusManager.cpp  SignalStatusManager.h  main.cpp
signal_status_manager/src/mock/: CMakeLists.txt  MockMixedSignalMain.cpp  MockNoSignalMain.cpp  MockSignalStrengthPublisher.cpp  MockSignalStrengthPublisher.h
temperature_manager/: CMakeLists.txt  package.xml
temperature_manager/msg/: TemperatureStatus.msg
temperature_manager/src/: CMakeLists.txt  TemperatureStatusManager.cpp  TemperatureStatusManager.h  main.cpp
temperature_manager/src/mock/: CMakeLists.txt  MockTemperaturePublisher.cpp
