<package>
  <name>robot_manager_msgs</name>
  <version>0.0.1</version>
  <description>
    Common ROS messages for different modules within the Robot manager for the in GEM project.
  </description>
  <maintainer email="enriquepiera8@hotmail.com">Enrique Piera Serra</maintainer>
  <author email="enriquepiera8@hotmail.com">Enrique Piera Serra</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
